--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@tailwindcss/vite": "^4.1.7",
+    "@astrojs/react": "^4.3.0",
+    "@astrojs/sitemap": "^3.4.0",
+    "@playform/compress": "^0.1.9",
+    "@tailwindcss/typography": "^0.5.16",
     "astro": "^5.8.0",
-    "astro-seo": "^0.8.4"
+    "astro-icon": "^1.1.5",
+    "astro-robots-txt": "^1.0.0",
+    "astro-seo": "^0.8.4",
+    "preline": "^3.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.7"
+    "@astrojs/tailwind": "^6.0.2",
+    "@tailwindcss/postcss": "^4.1.7"
   }
 }
