--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
+    "nodemailer": "^7.0.3",
     "preline": "^3.0.1"
   },
   "devDependencies": {
