--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@astrojs/sitemap": "^3.4.0",
     "@playform/compress": "^0.1.9",
     "@tailwindcss/typography": "^0.5.16",
-    "astro": "^5.8.0",
+    "astro": "^5.8.1",
     "astro-icon": "^1.1.5",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.4",
     "nodemailer": "^7.0.3",
-    "preline": "^3.0.1"
+    "preline": "^3.0.1",
+    "react-floating-whatsapp": "^5.0.8"
   },
   "devDependencies": {
     "@astrojs/tailwind": "^6.0.2",
